Change z-index in input wrapper day to correctly display popup window from date picker

--- a/client/src/components/others/booking/BookingFormDayTime.scss
+++ b/client/src/components/others/booking/BookingFormDayTime.scss
@@ -21,7 +21,7 @@
   &__input-wrapper-day {
     display: flex;
     flex-direction: column;
-    z-index: 4;
+    z-index: 10;
   }
 
   &__input-date,
